[package]
name = "yacurses"
description = "Yet Another Curses library."
repository = "https://github.com/Lokathor/yacurses"
version = "0.2.3"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
# none!

[target.'cfg(windows)'.build-dependencies]
cc = "1"
